Basic login working

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Home</title>
 </head>
 <body>
-<h1>Hello World</h1>
+THIS IS THE HOME PAGE.
 </body>
 </html>
