--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home</title>
-</head>
-<body>
-
+{% extends 'base.html' %}
+{% block title %}Home Page{% endblock %}
+{% block content %}
 {% if user.is_authenticated %}
     <p>Welcome, {{ user.username }}.</p>
 {% else %}
     <p>Welcome, new user.</p><a href="login">please login</a>
 {% endif %}
 
-<p>THIS IS THE HOME PAGE</p>
+<p>This is the home page!</p>
 
 {% if user.is_authenticated %}
-    <a href="logout">Logout</a>
+    <a href="/questionnaire/logout">Logout</a>
 {% endif %}
-
-</body>
-</html>
+{% endblock %}
