--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-
+{% extends 'base.html' %}
+{% block title %}Login Page{% endblock %}
 {% block content %}
   <h2>Login</h2>
   <form method="post">
@@ -14,5 +8,3 @@
     <button type="submit">Login</button>
   </form>
 {% endblock %}
-</body>
-</html>
