--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 <p>This is the home page!</p>
 
 {% if user.is_authenticated %}
+    <a href="/questionnaire/change-password">Change password</a>
     <a href="/questionnaire/logout">Logout</a>
 {% endif %}
 {% endblock %}
