Changed questionnaire url to be root

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -2,5 +2,5 @@
 {% block title %}Logout Page{% endblock %}
 {% block content %}
     <p>You have now logged out</p>
-    <a href="/questionnaire/login">You can login here</a>
+    <a href="/login">You can login here</a>
 {% endblock %}
