--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
 {% if user.is_authenticated %}
     <p>Welcome, {{ user.username }}.</p>
 {% else %}
-    <p>Welcome, new user.</p><a href="login">please login</a>
+    <p>Welcome, new user.</p><a href="/login">please login</a>
 {% endif %}
 
 <p>This is the home page!</p>
 
 {% if user.is_authenticated %}
-    <a href="/questionnaire/change-password">Change password</a>
-    <a href="/questionnaire/logout">Logout</a>
+    <a href="/change-password">Change password</a>
+    <a href="/logout">Logout</a>
 {% endif %}
 {% endblock %}
