--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Logout Page{% endblock %}
+{% block title %}Password Change Complete{% endblock %}
 {% block content %}
     <p>Password successfully changed!</p>
 {% endblock %}
