--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Password Change Page{% endblock %}
+{% block title %}Registration Page{% endblock %}
 {% block content %}
-  <h2>Change Password</h2>
+  <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Change password</button>
+    <button type="submit">Create account</button>
   </form>
 {% endblock %}
