--- a/templates/base.html
+++ b/templates/base.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 {% block content %}{% endblock %}
+{% if user.is_authenticated %}
+    <a href="/change-password">Change password</a>
+    <a href="/logout">Logout</a>
+{% endif %}
 </body>
 </html>
