--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,16 @@
     <p>Welcome, please <a href="/register">create an account</a> or <a href="/login">login</a></p>
 {% endif %}
 
-<p>This is the home page!</p>
+<p>This is the home page of the questionnaire site!</p>
 
 {% if user.is_authenticated %}
-    <a href="/change-password">Change password</a>
-    <a href="/logout">Logout</a>
+
+    {%  for questionnaire in questionnaires %}
+        <p>{{ questionnaire.description }}</p>
+    {% empty %}
+        <p>There are currently no active questionnaires</p>
+    {% endfor %}
+
 {% endif %}
+
 {% endblock %}
