Added dependancies for foundation

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% load static %}
+    <link rel="stylesheet" href="{% static "bower_components/foundation/css/foundation.min.css" %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -10,5 +14,11 @@
     <a href="/change-password">Change password</a>
     <a href="/logout">Logout</a>
 {% endif %}
+    {% load static %}
+    <script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
+    <script src="{% static "bower_components/foundation/js/foundation.min.js" %}"></script>
+    <script>
+      $(document).foundation();
+    </script>
 </body>
 </html>
