--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,33 @@
 {% extends 'base.html' %}
 {% block title %}Login Page{% endblock %}
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
+    <div class="large-3 large-centered columns">
+        <div class="login-box">
+            <div class="row">
+                <div class="large-12 columns">
+                    <form method="post" action="{% url 'login' %}">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="large-12 columns">
+                                {{ form.username }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                {{ form.password }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 large-centered columns">
+                                <input type="submit" class="button expand" value="Log In"/>
+                            </div>
+                        </div>
+                    </form>
+                    {% if form.errors %}
+                        <p>Your username and password didn't match. Please try again.</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
