made login use grid

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     {% load static %}
     <link rel="stylesheet" href="{% static "bower_components/foundation/css/foundation.min.css" %}">
+    <link rel="stylesheet" href="{% static "questionnaire_app/main.css" %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
