Custom registration form

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% block title %}Login Page{% endblock %}
 {% block content %}
     <div class="large-3 large-centered columns">
-        <div class="login-box">
+        <div class="user-box">
             <div class="row">
                 <div class="large-12 columns">
                     <form method="post" action="{% url 'login' %}">
