change password custom form

--- a/templates/registration/password_change.html
+++ b/templates/registration/password_change.html
@@ -1,10 +1,46 @@
 {% extends 'base.html' %}
 {% block title %}Password Change Page{% endblock %}
 {% block content %}
-  <h2>Change Password</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Change password</button>
-  </form>
+    <div class="large-3 large-centered columns">
+        <div class="user-box">
+            <div class="row">
+                <div class="large-12 columns">
+                    <form method="post" action="{% url 'change_pw' %}">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="large-12 columns text-center">
+                                <h3>Change Password</h3>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                {{ form.old_password.label_tag }}
+                                {{ form.old_password }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                {{ form.new_password1.label_tag }}
+                                {{ form.new_password1 }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                {{ form.new_password2.label_tag }}
+                                {{ form.new_password2 }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 large-centered columns">
+                                <input type="submit" class="button expand" value="confirm"/>
+                            </div>
+                        </div>
+                    </form>
+                    {% if form.errors %}
+                        <p>Your username and password didn't match. Please try again.</p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
