display djangos own form errors

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,7 +31,7 @@
                         </div>
                     </form>
                     {% if form.errors %}
-                        <p>Your username and password didn't match. Please try again.</p>
+                        <p>{{ form.errors }}</p>
                     {% endif %}
                 </div>
             </div>
