--- a/templates/registration/password_change.html
+++ b/templates/registration/password_change.html
@@ -37,7 +37,7 @@
                         </div>
                     </form>
                     {% if form.errors %}
-                        <p>Your username and password didn't match. Please try again.</p>
+                        <p>{{ form.error }}</p>
                     {% endif %}
                 </div>
             </div>
