--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -31,7 +31,7 @@
                         </div>
                     </form>
                     {% if form.errors %}
-                        <p>{{ form.errors }}</p>
+                        <p>{{ form.non_field_errors.as_text|cut:"* " }}</p>
                     {% endif %}
                 </div>
             </div>
