--- a/templates/base.html
+++ b/templates/base.html
@@ -3,24 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static "bower_components/foundation-sites/dist/css/foundation.min.css" %}">
     <link rel="stylesheet" href="{% static "questionnaire_app/main.css" %}">
 </head>
 <body>
+<div class="top-bar">
+    <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">MapAction Questionnaires</li>
+        </ul>
+    </div>
+    <div class="top-bar-right">
+        <ul class="dropdown menu" data-dropdown-menu>
+            <li><a href="#">About</a></li>
+            {% if user.is_superuser %}
+                <li><a href="/admin">admin</a></li>
+            {% endif %}
+            {% if user.is_authenticated %}
+                <li><a href="/change-password">Change password</a></li>
+                <li><a href="/logout">Logout</a></li>
+            {% else %}
+                <li><a href="/login">Login</a></li>
+            {% endif %}
+        </ul>
+    </div>
+</div>
 {% block content %}{% endblock %}
-{% if user.is_authenticated %}
-    <a href="/change-password">Change password</a>
-    <a href="/logout">Logout</a>
-{% endif %}
-    {% load static %}
-    <script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
-    <script src="{% static "bower_components/what-input/dist/what-input.min.js" %}"></script>
-    <script src="{% static "bower_components/foundation-sites/dist/js/foundation.min.js" %}"></script>
-    <script>
-      $(document).foundation();
-    </script>
+{% load static %}
+<script src="{% static "bower_components/jquery/dist/jquery.min.js" %}"></script>
+<script src="{% static "bower_components/what-input/dist/what-input.min.js" %}"></script>
+<script src="{% static "bower_components/foundation-sites/dist/js/foundation.min.js" %}"></script>
+<script>
+    $(document).foundation();
+</script>
 </body>
 </html>
