--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
         <ul class="dropdown menu" data-dropdown-menu>
             <li><a href="#">About</a></li>
             {% if user.is_superuser %}
-                <li><a href="/admin">admin</a></li>
+                <li><a href="/admin">Admin</a></li>
             {% endif %}
             {% if user.is_authenticated %}
                 <li><a href="/change-password">Change password</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li><a href="/logout">Logout ({{ user.username }})</a></li>
             {% else %}
                 <li><a href="/login">Login</a></li>
             {% endif %}
