--- a/templates/ma_module.html
+++ b/templates/ma_module.html
@@ -4,9 +4,10 @@
     {% if user.is_authenticated %}
         <h3>{{ ma_module.name }}</h3>
 
-        {% for question in questions %}
-            <p>{{ question.question_text }}</p>
-        {% endfor %}
+{#        {% for question in questions %}#}
+{#            <p>{{ question.question_text }}</p>#}
+{#        {% endfor %}#}
+        {{ question_form.as_p }}
 
     {% endif %}
 {% endblock %}
